# jessesmith

./: .gitignore  README.md
ProjectTemplate/: .cproject  .project
ProjectTemplate/src/: main.c  setup.c
project_phase_0/Fan_Control_atom/: platformio.ini
project_phase_0/Fan_Control_atom/src/: main.c  setup.c
project_phase_0/fan_control/: .cproject  .project
project_phase_0/fan_control/inc/: setup.h
project_phase_0/fan_control/src/: main.c  setup.c
week6/day2/pi/: main.c  (+1 more)
week7/BSP_Fun/: .cproject  .project  LinkerScript.ld  readme.txt
week7/Blinkie/: .cproject  .project
week7/KnightRider/: .project
week7/KnightRiderWithButton/: .cproject
week7/LinkedList-with-Rust/: CMakeLists.txt  main.c
week7/LinkedList-with-Rust/app_lib/: linked_list.c  linked_list.h
week7/LinkedList-with-Rust/app_tests/: linked_list_tests.cpp
week7/LinkedList-with-Rust/linkedlist-ffi/: Cargo.toml
week7/LinkedList-with-Rust/linkedlist-ffi/src/: lib.rs  rust_linked_list.h
week7/Radio_with_interupts/: .cproject  .project
week7/modified_binary_counter/: .cproject  .project
week7/railroad/: .cproject  .project
week8/PWM_Blink_with_IT/: .cproject  .project
week8/Snake/: .cproject  .project
week8/TimerTest/: .cproject  .project
week8/TimersUSartInCube/: .cproject  .mxproject  .project  PlayingWithTimers.ioc  STM32F746NGHX_FLASH.ld
week8/i2c_fun/: .cproject  .project
week8/uart_tx_rx/: .cproject  .project
week9/ADC_Test/: .cproject
week9/ColorWheel/: .cproject  .project
week9/RTOS_CMSIS/: .cproject  .project
week9/RTOS_Notify_Task/: .cproject  .project
(+74 files in other folders)
